src/components/Reviews/Reviews.styl
.Reviews {
	position relative
	border-radius 4px
	box-sizing border-box
	overflow hidden

	&:before {
		content ''
		fullsize()
		background-color #fff

		@media $phone {
			border-radius 0	
		}
	}
	@media $tablet {
		width 100%
	}
	@media $phone {
		width auto
		margin-left -16px
		margin-right -16px
		padding-bottom 10px
		border-radius 0

		.swiper-container {
			overflow visible
		}
	}
	&__container {
		position: relative
		display flex
		align-items flex-start
		width 100%
		transition-timing-function cubic-bezier(0.39, 0.58, 0.57, 1)
	}
	&__item {
		color $textColor
		padding 32px 0
		padding-bottom 90px
		padding-left 100px
		padding-right 100px
		box-sizing border-box
		grid-width(8)

		@media $tablet {
			padding-left 0
			padding-right 0	
		}

		@media $phone {
			padding 32px 20px
			padding-bottom 48px
		}
		svg {
			max-width 100%
		}
		&_disable {
			opacity 0.1
		}

		&--count {
			opacity .7	
		}
	}
	&__inner {
		position relative
		display flex
		flex-direction column
		padding 0 32px

		@media $tablet {
			padding 0 60px
		}

		@media $phone {
			display block
			padding 0
		}
	}
	&__pagination {
		position absolute
		bottom 10px
		left 50%
		transform translateX(-50%)

		.swiper-pagination-bullet {
			opacity 1
			width 9px
			height 9px
			border-radius 50%
			background-color alpha($textColor, .4)
			margin  0 3px
			transition background-color $duration

			&:after {
				content ''
				position absolute
				z-index 1
				left -3px
				top -3px
				width 15px
				height 15px
				cursor pointer
			}

			&-active {
				background-color $textColor
			}
		}
	}

	&__logo {
		margin-left auto

		img {
			display block
			width 100%	
		}
	}

	&__avatar {

		@media $phone {
			margin-bottom 16px
		}

		img {
			display block
			border-radius 50%
			width 83px
			height 83px
			overflow hidden
		}
	}
	&__content {
		flex-grow 1
	}
	&__top {
		display flex
		justify-content space-between
		align-items center
		margin-bottom 22px
	}
	&__info {
		display flex
		align-items center
		width 100%

		@media $phone {
			flex-direction column
			align-items flex-start	
		}

		&-content {
			display flex
			align-items center
			padding-left 16px
			width 100%	

			@media $phone {
				align-items flex-start
				padding-left 0
			}
		}

		&-text {
			@media $phone {
				max-width 180px
			}	
		}
	}
	&__name {
		margin-bottom 8px
	}
	&__logo {

		svg {
			display block
		}
	}
	&__position {
		max-width 250px
		margin 0 auto
	}
	&__text {
		margin-bottom 0
		text-align left
		text-indent -0.54em

		@media $phone {
			body()
		}
	}

	&__navigation {
		position absolute
		width 100%
		height 100%
		left 0
		top 0
		right 0
		bottom 0

		@media $tablet {
			display none	
		}

		&-item {
			position absolute
			top 0
			bottom 0
			width 100px
			height 100%
			background-color transparent
			cursor pointer
			transition opacity 0.3s linear, background-color 0.15s linear
			z-index 100

			&:hover {
				opacity 1
				background-color alpha(#000, 5%)
				transition background-color 0.15s linear
			}

			&_prev {
				left 0
			}

			&_next {
				opacity 1
				right 0
			}
			&_hide {
				opacity 0	
			}
		}	

		&-icon {
			position absolute
			top 50%
			margin-top -12px
			height 24px
			width 24px

			animation-duration 1.5s;

			animation-iteration-count infinite
			animation-timing-function linear

			& > path {
				fill #000
			}

			&_left {
				animation-name: MobileSlider__leftArrow;
			}

			&_right {
				animation-name: MobileSlider__rightArrow;
				transform: rotate(180deg);
			}
		}
	}

	.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
		margin 0 3px	
	}

	.swiper-container-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic .swiper-pagination-bullet {
		transition 200ms transform, 200ms left, background-color $duration
	}
}

.swiper-container-horizontal > .Reviews__pagination.swiper-pagination-bullets {
	bottom 18px
	left 50%
	width auto

	@media $phone {
		bottom 8px	
	}
}

@keyframes MobileSlider__leftArrow {
	0% {
		left: 44px;
	}

	50% {
		left: 32px;
	}

	100% {
		left: 44px;
	}
}


@keyframes MobileSlider__rightArrow {
  0% {
    right 44px
  }

  50% {
    right 32px
  }

  100% {
    right 44px
  }
}

